# beyond-persuasion-nlp

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: base.yaml  real_benchmark.yaml
data/evaluation/: prompts.csv
docs/: presentation_demo.ipynb  project_overview.md
docs/reports/: beyond_persuasion_final_report.tex  final_report_template.md
scripts/: run_demo.py  run_real_benchmarks.py
src/beyond_persuasion/: __init__.py  config.py  schemas.py
src/beyond_persuasion/affective/: __init__.py  pipeline.py  preprocessing.py
src/beyond_persuasion/ethics/: __init__.py  engine.py  rules.py
src/beyond_persuasion/evaluation/: dataset.py  runner.py
src/beyond_persuasion/llm/: __init__.py  local_model.py  prompting.py
src/beyond_persuasion/orchestration/: agent.py
src/beyond_persuasion/utils/: logging.py
tests/fixtures/: README.md
tests/integration/: test_evaluation_runner.py  test_guarded_agent.py
tests/unit/: test_affective_pipeline.py  test_ethics_engine.py  test_prompting.py
