[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beyond-persuasion-nlp"
version = "0.1.0"
description = "Context-aware conversational agents to reduce manipulative behavior toward emotionally vulnerable users."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Jacopo" }
]
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]
ml = [
  "transformers>=4.0",
  "torch>=2.0",
  "datasets>=2.0",
]
llm = [
  "llama-cpp-python>=0.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
